--- a/examples/emergenet_examples.ipynb
+++ b/examples/emergenet_examples.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8161f32b",
+   "id": "a98e88c4",
    "metadata": {},
    "source": [
     "# Evaluating Sequence Risk with `emergenet.emergenet`\n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "bc198808",
+   "id": "3c13f801",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8751daf6",
+   "id": "f8d4db23",
    "metadata": {},
    "source": [
     "## Evaluation of Risk at a Particular Time\n",
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "52b1382a",
+   "id": "1ef828bd",
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c275567a",
+   "id": "fffeac42",
    "metadata": {},
    "source": [
     "The `Enet` model requires the analysis date in format YYYY-MM-DD, the HA sequence, and the NA sequence. It will train multiple Emergenet models, so it will take several minutes.\n",
@@ -84,10 +84,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1cb4f90a",
+   "id": "bfa863f6",
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%time\n",
+    "\n",
     "analysis_date = row['Date of Risk Assessment']\n",
     "ha_seq = row['HA Sequence']\n",
     "na_seq = row['NA Sequence']\n",
@@ -105,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfaa79f6",
+   "id": "1ea9b3d6",
    "metadata": {},
    "source": [
     "## Evaluation of Risk at Present Time\n",
@@ -118,10 +120,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ed9cba0",
+   "id": "7a4918b0",
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%time\n",
+    "\n",
     "# Initialize the Enet\n",
     "enet_present = Enet('PRESENT', ha_seq, na_seq, random_state=42)\n",
     "\n",
