--- a/paper_data_v3/irat_enet/final_irat_model/irat_predictions.ipynb
+++ b/paper_data_v3/irat_enet/final_irat_model/irat_predictions.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "b1b87e7e",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,12 @@
     "\n",
     "RESULT_DIR = 'results/'\n",
     "LINEAR_MODEL_DIR = 'linear_models/'\n",
-    "EMERGENET_MODEL_DIR = '../emergenet/models/'"
+    "EMERGENET_MODEL_DIR = '../emergenet/models/'\n",
+    "\n",
+    "# Create the directories if they don't exist\n",
+    "os.makedirs(RESULT_DIR, exist_ok=True)\n",
+    "os.makedirs(LINEAR_MODEL_DIR, exist_ok=True)\n",
+    "os.makedirs(EMERGENET_MODEL_DIR, exist_ok=True)"
    ]
   },
   {
@@ -821,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "803e35a4",
    "metadata": {},
    "outputs": [],
