--- a/tex/figuresandtables.tex
+++ b/tex/figuresandtables.tex
@@ -61,9 +61,9 @@
   \tikzexternalenable
   \tikzsetnextfilename{figpred}
   \centering
- %\tikzXtrue
+ \tikzXtrue
   \iftikzX  
-   \input{Figures/figpred}  
+   \input{Figures/figpred_v3}  
    \else 
    \includegraphics[width=\textwidth]{Figures/External/figpred}
    \fi
