--- a/paper_data_v3/irat_enet/animal_predictions.ipynb
+++ b/paper_data_v3/irat_enet/animal_predictions.ipynb
@@ -53,9 +53,7 @@
    "cell_type": "code",
    "execution_count": 35,
    "id": "af131b3a",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -210,9 +208,7 @@
    "cell_type": "code",
    "execution_count": 110,
    "id": "f0302cc3",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -240,7 +236,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -254,7 +250,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
