--- a/paper_data_v3/irat_enet/animal_predictions.ipynb
+++ b/paper_data_v3/irat_enet/animal_predictions.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "b1b87e7e",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
     "plt.rcParams['figure.dpi'] = 300\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
-    "# from emergenet.emergenet import predict_irat_emergence\n",
+    "from emergenet.emergenet import predict_irat_emergence\n",
     "\n",
     "\n",
     "RESULT_DIR = 'results/animal_predictions/'"
@@ -249,23 +249,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "id": "f9cbe44d",
    "metadata": {},
    "outputs": [],
    "source": [
     "irat = pd.read_csv('results/irat_predictions/irat.csv')\n",
+    "irat_with_accessions = pd.read_csv('data/irat.csv')[['Influenza Virus', 'HA Accession', 'NA Accession']]\n",
+    "irat = irat.merge(irat_with_accessions, on='Influenza Virus', how='left')\n",
     "animal = pd.read_csv('results/animal_predictions/animal.csv')\n",
-    "\n",
-    "irat = irat[['Influenza Virus', 'Virus Type', 'Date of Risk Assessment',\n",
-    "             'HA Sequence', 'NA Sequence', 'HA Risk',\n",
-    "             'NA Risk', 'Geom Mean Risk', 'Predicted Emergence',\n",
-    "             'Predicted Emergence Low', 'Predicted Emergence High']]\n",
-    "animal = animal.drop(columns=['ha_accession', 'na_accession'])\n",
     "irat['is_irat'] = 1\n",
     "animal['is_irat'] = 0\n",
-    "irat.columns = animal.columns\n",
+    "irat = irat[['Influenza Virus', 'Virus Type', 'Date of Risk Assessment',\n",
+    "             'HA Accession', 'HA Sequence', 'NA Accession', 'NA Sequence', \n",
+    "             'HA Risk', 'NA Risk', 'Geom Mean Risk', 'Predicted Emergence',\n",
+    "             'Predicted Emergence Low', 'Predicted Emergence High',\n",
+    "             'is_irat', 'Emergence Score', 'Impact Score',\n",
+    "             'Mean Low Acceptable Emergence', 'Mean High Acceptable Emergence',\n",
+    "             'Mean Low Acceptable Impact', 'Mean High Acceptable Impact',]]\n",
     "\n",
+    "irat.columns = list(animal.columns) + ['emergence_score', 'impact_score', \n",
+    "                                       'mean_low_acceptable_emergence', 'mean_high_acceptable_emergence', \n",
+    "                                       'mean_low_acceptable_impact', 'mean_high_acceptable_impact']\n",
     "combined = pd.concat([irat, animal], ignore_index=True)\n",
     "combined.to_csv(RESULT_DIR + 'animal_combined_with_irat.csv', index=False)"
    ]
